[tool.poetry]
name = "pyfil"
version = "1.9.2"
description = "Python one-liners in the shell in the spirit of Perl and AWK"
authors = ["Aaron Christianson <ninjaaron@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.rst"
homepage = "https://github.com/ninjaaron/pyfil"
repository = "https://github.com/ninjaaron/pyfil"
packages = [ { include = "pyfil.py" } ]

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.scripts]
rep = "pyfil:main"
pyfil = "pyfil:main"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
